# relE_binder_design

./: README.md  makefile  peptide_binder_design.yml  pyproject.toml
TERMinator_sscore/: README.md  env.yaml  terminator_sscore.yml
cplusplus/: makefile
fragment_tools_cpp/: makefile
helperprograms/: alignInteractingFrames.cpp  buildSeedBridgeDB.cpp  computePotentialContactsData.cpp  createBinderBinaryFile.cpp  createStructureDB.cpp  defineInterfaceContacts.cpp  extractFromBinaryFile.cpp  greedyClusterSegments.cpp  readOrWriteBinaryFile.cpp
inc/: alignframes.h  bridgeseeds.h  chainextension.h  fragmentdb.h  generateseeds.h  hashframes.h  residuecontact.h  residueframe.h  scoreinterface.h  searchrespairs.h  utilities.h
programs/: alignInteractingFrames.cpp  buildBridgeSeedsGraph.cpp  createStructureDB.cpp  generateSeeds.cpp  greedyClusterSeeds.cpp  interfaceFrameCoverage.cpp  scoreBinder.cpp  scoreBinderResidueBackbone.cpp  scoreInterface.cpp
pymol_scripts/: drawCGOResFrames.py  loadResidueFrames.py
rosetta/: createSilentFiles.py  relaxscript_modified_MonomerRelax2019.txt  run_relaxComplex.sh
scripts/: vdwRadii.csv  vdwRadiiForCPP.txt
src/: alignframes.cpp  bridgeseeds.cpp  chainextension.cpp  fragmentdb.cpp  freesasaext.cpp  generateseeds.cpp  hashframes.cpp  residuecontact.cpp  residueframe.cpp  scoreinterface.cpp  searchrespairs.cpp  utilities.cpp
testfiles/: contact2DHistogramData_withClashData.json  contact2DHistogramData_withClashData_withUNK.json
tests/: computeCbParams.cpp  computePotentialContactsData.cpp  readPotentialContactsData.cpp  (+12 more)
(+353 files in other folders)
